[gd_scene load_steps=11 format=3 uid="uid://ce5h85kvbhdgb"]

[ext_resource type="Script" path="res://Scripts/Menu/pauseMenu.gd" id="1_fraxx"]
[ext_resource type="FontFile" uid="uid://b5w4bpcpnvqoj" path="res://Misc/LowGothic_8x10_Regular.ttf" id="1_sk6s5"]
[ext_resource type="Texture2D" uid="uid://cjgk67omh3dsa" path="res://Sprites/UI/pause buttons2.png" id="2_7e7qd"]
[ext_resource type="Texture2D" uid="uid://rdd660vk5doa" path="res://Sprites/UI/pause buttons5.png" id="3_c3nit"]
[ext_resource type="Texture2D" uid="uid://dk1o2dw6qc67f" path="res://Sprites/UI/pause buttons3.png" id="3_elpog"]
[ext_resource type="Texture2D" uid="uid://f8vl175kat25" path="res://Sprites/UI/pause buttons1.png" id="4_rccrs"]
[ext_resource type="Texture2D" uid="uid://bw6sdc8wat2y6" path="res://Sprites/UI/pause buttons4.png" id="5_ei0gy"]
[ext_resource type="Texture2D" uid="uid://c5fohkpab54ko" path="res://Sprites/UI/pause buttons7.png" id="6_clpdw"]
[ext_resource type="Texture2D" uid="uid://50hceylr3cmw" path="res://Sprites/UI/pause buttons6.png" id="6_jf5be"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07vu3"]
bg_color = Color(0.219608, 0.156863, 0.262745, 0.784314)

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("submenu", "resumeButton")]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fraxx")
submenu = NodePath("Submenu")
resumeButton = NodePath("Submenu/Resume")

[node name="Submenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Submenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.1
anchor_top = -0.1
anchor_right = 12.1
anchor_bottom = 6.825
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_07vu3")
metadata/_edit_use_anchors_ = true

[node name="Resume" type="TextureButton" parent="Submenu"]
layout_mode = 0
offset_left = 144.0
offset_top = 160.0
offset_right = 184.0
offset_bottom = 200.0
texture_normal = ExtResource("2_7e7qd")
texture_pressed = ExtResource("3_c3nit")
texture_focused = ExtResource("4_rccrs")

[node name="Reload" type="TextureButton" parent="Submenu"]
offset_left = 224.0
offset_top = 160.0
offset_right = 264.0
offset_bottom = 200.0
texture_normal = ExtResource("3_elpog")
texture_pressed = ExtResource("6_jf5be")
texture_focused = ExtResource("4_rccrs")

[node name="Quit" type="TextureButton" parent="Submenu"]
offset_left = 304.0
offset_top = 160.0
offset_right = 344.0
offset_bottom = 200.0
texture_normal = ExtResource("5_ei0gy")
texture_pressed = ExtResource("6_clpdw")
texture_focused = ExtResource("4_rccrs")

[node name="Label" type="Label" parent="Submenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 124.0
offset_top = 60.0
offset_right = 324.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.780392, 0.776471, 0.776471, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_sk6s5")
theme_override_font_sizes/font_size = 64
text = "PAUSE"
horizontal_alignment = 1

[connection signal="pressed" from="Submenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Submenu/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Submenu/Quit" to="." method="_on_quit_pressed"]
